--- a/.github/workflows/deployment1.yml
+++ b/.github/workflows/deployment1.yml
@@ -21,7 +21,7 @@ jobs:
         run: npm run lint
   test: 
     runs-on: ubuntu-latest
-    needs: lint
+    #needs: lint
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -35,7 +35,7 @@ jobs:
         run : npm test
   deploy:
     runs-on: ubuntu-latest
-    needs: [lint, test]
+    #needs: [lint, test]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -46,6 +46,4 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Deploy
-        run: echo "Deploying"
-      - name: Deploy
-        run: npm run deploy
+        run: echo "🚀 Deploying... 🌐"
