--- a/.github/workflows/workflow 2.yml
+++ b/.github/workflows/workflow 2.yml
@@ -1,1 +1,13 @@
+name: iSSUES
+on: issues
+    
+jobs:
+    Fetching-The-Issues:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v2
+            - name: output the issues
+              run: echo "${{ toJson(github.event)}}"
+              
 
