--- a/.github/workflows/deployment1.yml
+++ b/.github/workflows/deployment1.yml
@@ -18,7 +18,9 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Lint
-        run: npm run lint
+        run: |
+          🔍 Running linter...
+          npm run lint
   test: 
     runs-on: ubuntu-latest
     #needs: lint
@@ -32,10 +34,12 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: run tests
-        run : npm test
+        run : |
+          echo "🧪 Running tests..."
+          npm test
   deploy:
     runs-on: ubuntu-latest
-    #needs: [lint, test]
+    needs: [lint, test]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
