--- a/.github/workflows/deployment1.yml
+++ b/.github/workflows/deployment1.yml
@@ -50,4 +50,4 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Deploy
-        run: echo "🚀 Deploying... 🌐"
+        run: ech "🚀 Deploying... 🌐"
